--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Build project
         run: npm run build
 
-#      - name: Run tests
-#        run: npm test
+      - name: Run tests
+        run: npm test
