--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x
+          node-version: 24.x
           cache: 'npm'
 
       - name: Install dependencies
@@ -35,5 +35,5 @@ jobs:
       - name: Build project
         run: npm run build
 
-#      - name: Run tests
-#        run: npm test
+      - name: Run tests
+        run: npm test
